--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@ html {
 body {
   margin: 0;
   min-height: 100vh;
+  width: 100vw;
   background: var(--color-bg-light);
 }
 
